[package]
name = "st7735-lcd"
description = "ST7735 TFT LCD driver with embedded-graphics support"
version = "0.9.0"
authors = ["KuuwangE<sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/shellcodesniper/shellcodesniper"
readme = "README.md"
documentation = "https://docs.rs/st7735-lcd"

[dependencies]
nb = "0.1"
esp32-hal = "0.17"
embedded-hal-1     = { version = "=1.0.0-rc.2", package = "embedded-hal" }
embedded-hal-async = "=1.0.0-rc.2"
embedded-io-async  = "0.6.1"
embedded-io = "0.6.1"
embedded-hal-bus   = "0.1.0-rc.2"
embassy-time   = { version = "0.2.0" }

[dependencies.embedded-graphics]
version = "0.8"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
